--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Starwars web mini-clone" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,8 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-
-    <title>Sprint8 - Star Wars</title>
+    <title>Starwars web mini-clone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
