work styles for Header

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Starwars web mini-clone</title>
+    <title>Starwars webapp</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
