--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="app"></div>
+    <div id="modal"></div>
   </body>
 </html>
