--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Starwars web mini-clone" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- <link
@@ -19,6 +18,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="app"></div>
-    <div id="modal"></div>
+    <div id="modal-portal"></div>
   </body>
 </html>
