Refactor SignIn form

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Starwars web mini-clone" />
+    <meta name="Educational project based on StarWars API in wich users can see multiple cards of characters, planets, starships and films." content="Starwars Cards App" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     /> -->
-    <title>Starwars webapp</title>
+    <title>Starwars Cards App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
